# RTSP-brute-force-tool

./: .gitignore  README.md  RTSP_bruteforce.py  config.example.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
debian/: .gitignore  changelog  control  copyright  debhelper-build-stamp  files  rtsp-brute-force-tool.manpages  rtsp-brute-force-tool.postinst.debhelper  rtsp-brute-force-tool.prerm.debhelper  rtsp-brute-force.1  rules  watch
debian/rtsp-brute-force-tool/DEBIAN/: control  md5sums  postinst  prerm
debian/rtsp-brute-force-tool/usr/lib/python3/dist-packages/: RTSP_bruteforce.py  rtsp_vendors.py
debian/rtsp-brute-force-tool/usr/lib/python3/dist-packages/rtsp_brute_force_tool-3.0.0.dist-info/: METADATA  entry_points.txt  top_level.txt
debian/tests/: control
docs/: kali-new-tool-request.md
tests/: test_cli.py
wordlists/vendors/: README.md
wordlists/vendors/dahua/: passwords.txt  paths.txt  users.txt
wordlists/vendors/hikvision/: passwords.txt  paths.txt  users.txt
